cmake_minimum_required (VERSION 2.8.11)
project (zee80)
find_package(wxWidgets REQUIRED net gl core base)
find_package(SDL2)
SET (CMAKE_CXX_COMPILER "/usr/bin/clang++" CACHE STRING "C++ compiler" FORCE)
find_package(Boost 1.40 COMPONENTS program_options REQUIRED)
include(${wxWidgets_USE_FILE})
set(CMAKE_CXX_FLAGS "-std=c++11 -O3 -ggdb -Wall -pg -fsanitize=address -mtune=native -Wall")
add_library (zee80 z80.cpp bushandler.cpp)
add_executable (zx48k zx48k.cpp zxtape.cpp emusdl.cpp)
add_executable (cpc cpcapp.cpp cpc.cpp emusdl.cpp fdc765.cpp)
add_executable (z80test z80test.cpp)
target_link_libraries (zx48k LINK_PUBLIC zee80 ${SDL2_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${wxWidgets_LIBRARIES} stsound)
target_link_libraries (cpc LINK_PUBLIC zee80 ${SDL2_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${wxWidgets_LIBRARIES})
target_link_libraries (z80test LINK_PUBLIC zee80 ${SDL2_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${wxWidgets_LIBRARIES})
